Creacion de pagina de donativos y de retorno, validacion de form

--- a/public/blog.html
+++ b/public/blog.html
@@ -26,11 +26,11 @@
     <link rel="stylesheet" href="./components/scroll-arrow/scroll-arrow.css">
     <link rel="stylesheet" href="./components/donacion/donacion.css">
     <link rel="stylesheet" href="./components/discapacidad/discapcidad.css">
-    <title>Fundación Jaimes Chia - Trabajando para la comunidad</title>
+    <title>Blog | Fundación Jaimes Chia - Trabajando para la comunidad</title>
 </head>
 
 <body>
-    
+
     <!-- Inicio Barra de Navegación -->
     <header id="navbar-componente"></header>
     <!-- Fin Barra de Navegación -->
@@ -83,7 +83,8 @@
                 <div class="container mt-5" id="noticias-container">
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="card mb-4 filtro-todos filtro-comunidad" id="noticia_1" data-aos="zoom-out">
+                            <div class="card mb-4 filtro-todos filtro-comunidad"
+                                id="renovacion_parque_virgen_del_carmen" data-aos="zoom-out">
                                 <img src="./assets/images/blog/noticias/noticia_1.jpg" class="card-img-top img-fluid"
                                     alt="Imagen representativa de la renovación en el Parque Virgen del Carmen"
                                     title="Renovación del Parque Virgen del Carmen: Un Renacimiento Verde y Social">
@@ -120,7 +121,7 @@
                         </div>
                         <!-- Agrega más entradas de noticias aquí -->
                         <div class="col-md-6">
-                            <div class="card mb-4 filtro-todos filtro-comunidad" id="noticia_2" data-aos="zoom-out">
+                            <div class="card mb-4 filtro-todos filtro-comunidad" id="mejoras_viales_barrio_Torcoroma" data-aos="zoom-out">
                                 <img src="./assets/images/blog/noticias/noticia_2.jpg" class="card-img-top img-fluid"
                                     alt="Imagen representativa de las mejoras viales en la calle 3 de la avenida 6"
                                     title="Imagen representativa de las mejoras viales en la calle 3 de la avenida 6">
@@ -156,7 +157,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="card mb-4 filtro-todos filtro-comunidad" id="noticia_3" data-aos="zoom-out">
+                            <div class="card mb-4 filtro-todos filtro-comunidad" id="renovacion_cancha_sector_bocono" data-aos="zoom-out">
                                 <img src="./assets/images/blog/noticias/noticia_3.jpg" class="card-img-top img-fluid"
                                     alt="Imagen representativa de la renovación de la cancha del sector Boconó"
                                     title="Imagen representativa de la renovación de la cancha del sector Boconó">
@@ -191,7 +192,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="card mb-4 filtro-todos filtro-social" id="noticia_4" data-aos="zoom-out">
+                            <div class="card mb-4 filtro-todos filtro-social" id="alegria_y_diversion_barrio_Aniversario" data-aos="zoom-out">
                                 <img src="./assets/images/blog/noticias/noticia_4.jpg" class="card-img-top img-fluid"
                                     alt="Imagen representativa de la alegría y diversión en el barrio Aniversario"
                                     title="Imagen representativa de la alegría y diversión en el barrio Aniversario">
