--- a/public/conocenos.html
+++ b/public/conocenos.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./components/scroll-arrow/scroll-arrow.css">
     <link rel="stylesheet" href="./components/donacion/donacion.css">
     <link rel="stylesheet" href="./components/discapacidad/discapcidad.css">
-    <title>Fundación Jaimes Chia - Trabajando para la comunidad</title>
+    <title>Conócenos | Fundación Jaimes Chia - Trabajando para la comunidad</title>
 </head>
 
 <body>
