--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="./components/scroll-arrow/scroll-arrow.css">
     <link rel="stylesheet" href="./components/donacion/donacion.css">
     <link rel="stylesheet" href="./components/discapacidad/discapcidad.css">
-    <title>Fundación Jaimes Chia - Trabajando para la comunidad</title>
+    <title>Inicio | Fundación Jaimes Chia - Trabajando para la comunidad</title>
 </head>
 
 <body>
@@ -155,7 +155,7 @@
                             contribución, grande o pequeña, es un paso más hacia un mundo mejor para todos.</p>
                     </div>
                     <div class="col-12 text-center">
-                        <a href="#" aria-label="Haz tu donación" title="Ir a la página de donaciones">
+                        <a href="./realizar_donativos.html" aria-label="Haz tu donación" title="Ir a la página de donaciones">
                             <button class="boton-donacion">
                                 <span class="fas fa-hand-holding-heart icono-donacion" aria-hidden="true"
                                     title="Icono de un mano sosteniendo un corazón"></span>¡Haz tu donación!
@@ -187,7 +187,7 @@
                             <div class="card-body">
                                 <h5 class="noticias-titulo">Renovación en el Parque Virgen del Carmen: Un Espacio de
                                     Comunidad Revitalizado</h5>
-                                <a href="blog.html#noticia_1"
+                                <a href="blog.html#renovacion_parque_virgen_del_carmen"
                                     aria-label="Leer más sobre la renovación en el Parque Virgen del Carmen"
                                     title="Leer más sobre la renovación en el Parque Virgen del Carmen"><button
                                         class="boton-noticias">Saber más</button></a>
@@ -204,7 +204,7 @@
                             <div class="card-body">
                                 <h5 class="noticias-titulo">Mejoras viales en la calle 3 de la avenida 6: Un paso hacia
                                     una movilidad más eficiente</h5>
-                                <a href="blog.html#noticia_2"
+                                <a href="blog.html#mejoras_viales_barrio_Torcoroma"
                                     aria-label="Leer más sobre las mejoras viales en la calle 3 de la avenida 6"
                                     title="Leer más sobre las mejoras viales en la calle 3 de la avenida 6"><button
                                         class="boton-noticias">Saber más</button></a>
@@ -221,7 +221,7 @@
                             <div class="card-body">
                                 <h5 class="noticias-titulo">Renovación de la cancha del sector Boconó: Un espacio
                                     deportivo recuperado y embellecido</h5>
-                                <a href="blog.html#noticia_3"
+                                <a href="blog.html#renovacion_cancha_sector_bocono"
                                     aria-label="Leer más sobre la renovación de la cancha del sector Boconó"
                                     title="Leer más sobre la renovación de la cancha del sector Boconó"><button
                                         class="boton-noticias">Saber más</button></a>
@@ -238,7 +238,7 @@
                             <div class="card-body">
                                 <h5 class="noticias-titulo">Alegría y diversión en el barrio Aniversario: Una tarde
                                     mágica para los niños</h5>
-                                <a href="blog.html#noticia_4"
+                                <a href="blog.html#alegria_y_diversion_barrio_Aniversario"
                                     aria-label="Leer más sobre la alegría y diversión en el barrio Aniversario"
                                     title="Leer más sobre la alegría y diversión en el barrio Aniversario"><button
                                         class="boton-noticias">Saber más</button></a>
