--- a/public/nuestrosproyectos.html
+++ b/public/nuestrosproyectos.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="./components/scroll-arrow/scroll-arrow.css">
     <link rel="stylesheet" href="./components/donacion/donacion.css">
     <link rel="stylesheet" href="./components/discapacidad/discapcidad.css">
-    <title>Fundación Jaimes Chia - Trabajando para la comunidad</title>
+    <title>Nuestros Proyectos | Fundación Jaimes Chia - Trabajando para la comunidad</title>
 </head>
 
 <body>
@@ -228,7 +228,7 @@
                             sumen a esta causa.</p>
                     </div>
                     <div class="col-md-12 text-center">
-                        <a href="#" aria-label="Haz tu donación" title="Ir a la página de donaciones">
+                        <a href="./realizar_donativos.html" aria-label="Haz tu donación" title="Ir a la página de donaciones">
                             <button class="boton-donacion-proyecto">
                                 <span class="fas fa-hand-holding-heart icono-donacion-proyecto" aria-hidden="true"
                                     title="Icono de un mano sosteniendo un corazón"></span> ¡Haz tu donación!
