integracion de pagina de politica de privacidad

--- a/public/conocenos.html
+++ b/public/conocenos.html
@@ -47,7 +47,7 @@
         <section class="corporativo-section">
             <div class="container text-center">
                 <h3 class="corporativo-titulo animate__animated animate__backInLeft" title="Quiénes Somos">¡Quiénes Somos!</h3>
-                <p class="corporativo-descriptivo animate__animated animate__backInLeft" title="Descripción de quiénes somos">En la Fundación Jaimes Chía,
+                <p class="corporativo-descriptivo animate__animated animate__backInLeft" title="Descripción de quiénes somos">En la Fundación Jaimes Chía Trabajando para la Comunidad,
                     nuestra historia es más que solo palabras en una página; es un testimonio de dedicación, pasión y
                     acción. Desde nuestros humildes comienzos en el corazón de Cúcuta hasta convertirnos en un faro de
                     esperanza en la comunidad, hemos dejado una marca indeleble en el tejido social.</p>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="col-12 col-md-6 mb-3 text-center order-sm-2 order-md-2 order-2">
                         <h3 class="corporativo-subtitulo" title="Nuestra Historia">Nuestra Historia</h3>
-                        <p class="corporativo-texto" title="Descripción de nuestra historia">La Fundación Jaimes Chía, trabajando para la comunidad, tiene sus
+                        <p class="corporativo-texto" title="Descripción de nuestra historia">La Fundación Jaimes Chía Trabajando para la Comunidad, tiene sus
                             raíces profundamente arraigadas en el bullicioso y colorido barrio de La Libertad, en la
                             ciudad de Cúcuta. Fue en este vibrante vecindario donde un grupo de visionarios miembros de
                             una misma familia se unieron con un propósito común: marcar una diferencia positiva en la
@@ -75,7 +75,7 @@
                 <div class="row align-items-center mt-5 mb-5" data-aos="zoom-in-down">
                     <div class="col-12 col-md-6 mb-3 text-center order-sm-2 order-md-1 order-2">
                         <h3 class="corporativo-subtitulo" title="Nuestra Misión">Nuestra Misión</h3>
-                        <p class="corporativo-texto" title="Descripción de nuestra misión">La Fundación Jaimes Chía, trabajando para la comunidad, es una
+                        <p class="corporativo-texto" title="Descripción de nuestra misión">La Fundación Jaimes Chía Trabajando para la Comunidad, es una
                             entidad sin ánimo de lucro, cuya misión es proporcionar los apoyos necesarios para las
                             personas de bajos recursos, en especial las madres cabeza de hogar, las personas de la
                             tercera edad y las personas con problemas de drogadicción. Realizamos programas de
@@ -97,7 +97,7 @@
                     </div>
                     <div class="col-12 col-md-6 mb-3 text-center order-sm-2 order-md-2">
                         <h3 class="corporativo-subtitulo" title="Nuestra Visión">Nuestra Visión</h3>
-                        <p class="corporativo-texto" title="Descripción de nuestra visión">La Fundación Jaimes Chía, trabajando por la comunidad, tiene
+                        <p class="corporativo-texto" title="Descripción de nuestra visión">La Fundación Jaimes Chía Trabajando para la Comunidad, tiene
                             proyectado para el año 2028 expandir su misión social en otras comunas de la ciudad de
                             Cúcuta, con la finalidad de prestar un servicio integral y comunitario para la protección de
                             derechos de la población de bajos recursos, en especial las madres cabeza de hogar, personas
@@ -109,7 +109,7 @@
                         <div class="text-center">
                             <h2 class="corporativo-subtitulo" title="Nuestros Valores Corporativos">Nuestros Valores
                                 Corporativos</h2>
-                            <p class="corporativo-texto" title="Descripción de valores corporativos">En la Fundación Jaimes Chía, nuestros valores no son solo
+                            <p class="corporativo-texto" title="Descripción de valores corporativos">En la Fundación Jaimes Chía Trabajando para la Comunidad, nuestros valores no son solo
                                 palabras en una página; son los cimientos sobre los que construimos nuestro legado de
                                 servicio y compromiso con la comunidad.</p>
                         </div>
