--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fundación Jaimes Chia - Trabajando para la comunidad</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon">
     <!-- BOOTSTRAP -->
@@ -28,7 +29,6 @@
     <link rel="stylesheet" href="./components/scroll-arrow/scroll-arrow.css">
     <link rel="stylesheet" href="./components/donacion/donacion.css">
     <link rel="stylesheet" href="./components/discapacidad/discapcidad.css">
-    <title>Inicio | Fundación Jaimes Chia - Trabajando para la comunidad</title>
 </head>
 
 <body>
@@ -110,7 +110,7 @@
                 <h4 class="impacto-titulo" title="Transformando vidas, construyendo comunidades">Transformando vidas,
                     construyendo comunidades</h4>
                 <p class="impacto-subtitulo" title="Descripción de transformando vidas, construyendo comunidades">Desde
-                    su fundación, la Fundación Jaimes Chía se ha dedicado a marcar una
+                    su fundación, la Fundación Jaimes Chía Trabajando para la Comunidad se ha dedicado a marcar una
                     diferencia tangible en las vidas de las personas y el tejido social de nuestra comunidad. Aquí
                     presentamos el impacto que hemos logrado hasta la fecha:</p>
                 <div class="row align-items-center">
