--- a/public/nuestrosproyectos.html
+++ b/public/nuestrosproyectos.html
@@ -54,7 +54,7 @@
                         Nuestros Proyectos</h3>
                     <p class="proyecto-descriptivo animate__animated animate__backInRight"
                         title="Descripción de nuestros proyectos">
-                        En la Fundación Jaimes Chía, estamos comprometidos con la creación de proyectos que generen un
+                        En la Fundación Jaimes Chía Trabajando para la Comunidad, estamos comprometidos con la creación de proyectos que generen un
                         impacto positivo y duradero en nuestra comunidad. Desde iniciativas deportivas que promueven un
                         estilo de vida activo hasta programas sociales que brindan apoyo a quienes más lo necesitan,
                         nuestros proyectos son la piedra angular de nuestra misión de construir un mundo más inclusivo y
@@ -67,7 +67,7 @@
                     <h5 class="deportivo-titulo" title="Proyecto deportivo: 'Jaimes Chía Fútbol Club'">Proyecto
                         deportivo: "Jaimes Chía Fútbol Club"</h5>
                     <p class="deportivo-subtitulo" title="Descripción del proyecto deportivo">
-                        En la Fundación Jaimes Chía, creemos en el poder del deporte para unir a la comunidad y promover
+                        Creemos en el poder del deporte para unir a la comunidad y promover
                         un estilo de vida saludable. A través de nuestros proyectos deportivos, brindamos oportunidades
                         para que niños, jóvenes y adultos participen en actividades deportivas y desarrollen habilidades
                         de liderazgo, trabajo en equipo y resiliencia.
@@ -121,7 +121,7 @@
                     <h5 class="social-titulo" title="Proyecto social: 'Manos Solidarias'">Proyecto social: "Manos
                         Solidarias"</h5>
                     <p class="social-subtitulo" title="Descripción del proyecto social">
-                        Los proyectos sociales de la Fundación Jaimes Chía están diseñados para abordar las necesidades
+                        Los proyectos sociales de la Fundación Jaimes Chía Trabajando para la Comunidad están diseñados para abordar las necesidades
                         más apremiantes de nuestra comunidad y promover la inclusión, la igualdad y el bienestar para
                         todos.
                     </p>
@@ -168,7 +168,7 @@
                     <h5 class="cultural-titulo" title="Proyecto cultural: 'Arte en Comunidad'">Proyecto cultural: "Arte
                         en Comunidad"</h5>
                     <p class="cultural-subtitulo" title="Descripción del proyecto cultural">
-                        En la Fundación Jaimes Chía, valoramos y celebramos la diversidad cultural de nuestra comunidad
+                        En la Fundación Jaimes Chía Trabajando para la Comunidad, valoramos y celebramos la diversidad cultural de nuestra comunidad
                         a través de proyectos que promueven el arte, la música, la literatura y las tradiciones locales.
                     </p>
                     <div class="card-body">
