--- a/public/realizar_donativos.html
+++ b/public/realizar_donativos.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- ANIMATE.CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- ESTILOS -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./components/navbar/navbar-component.css">
@@ -33,7 +35,7 @@
 
     <main>
         <section class="realizar-donacion-section" aria-label="Sección de Realizar Donación">
-            <div class="container my-5">
+            <div class="container my-5 animate__animated animate__backInLeft">
                 <div class="text-center mb-4">
                     <h1 class="titulo-realizar-donacion" title="Realiza tu donación">Realiza tu Donación</h1>
                     <p class="subtitulo-realizar-donacion" title="Descripción de tu donación">Elige la forma en que deseas contribuir a nuestra causa.</p>
@@ -76,7 +78,7 @@
                 <!-- Mensaje de Impacto -->
                 <div class="impact-message text-center mt-3">
                     <h5 class="card-title" title="Tu Apoyo transforma vidas">Tu Apoyo transforma vidas</h5>
-                    <p class="card-text mt-4" title="Descripción de tu apoyo transforma vidas">En la Fundación Jaimes Chía - Trabajando para la comunidad, cada donación cuenta. Gracias a tu generosidad, podemos continuar trabajando para mejorar la vida de las comunidades que más lo necesitan. Únete a nosotros en esta noble causa y ayuda a crear un futuro más brillante para todos.</p>
+                    <p class="card-text mt-4" title="Descripción de tu apoyo transforma vidas">En la Fundación Jaimes Chía Trabajando para la Comunidad, cada donación cuenta. Gracias a tu generosidad, podemos continuar trabajando para mejorar la vida de las comunidades que más lo necesitan. Únete a nosotros en esta noble causa y ayuda a crear un futuro más brillante para todos.</p>
                     <p title="Juntos, estamos marcando la diferencia."><strong>Juntos, estamos marcando la diferencia.</strong></p>
                 </div>
             </div>
