--- a/public/realizar_donativos.html
+++ b/public/realizar_donativos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fundación Jaimes Chia - Trabajando para la Comunidad</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon">
     <!-- BOOTSTRAP -->
@@ -21,7 +22,6 @@
     <link rel="stylesheet" href="./components/footer/footer.css">
     <link rel="stylesheet" href="./components/discapacidad/discapcidad.css">
     <link rel="stylesheet" href="./assets/css/donation.css">
-    <title>Donaciones | Fundación Jaimes Chía</title>
 </head>
 
 <body>
