--- a/public/conocenos.html
+++ b/public/conocenos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fundación Jaimes Chia - Trabajando para la Comunidad</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon">
     <!-- BOOTSTRAP -->
@@ -25,7 +26,6 @@
     <link rel="stylesheet" href="./components/scroll-arrow/scroll-arrow.css">
     <link rel="stylesheet" href="./components/donacion/donacion.css">
     <link rel="stylesheet" href="./components/discapacidad/discapcidad.css">
-    <title>Conócenos | Fundación Jaimes Chia - Trabajando para la comunidad</title>
 </head>
 
 <body>
