--- a/public/terminos_y_condiciones.html
+++ b/public/terminos_y_condiciones.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fundación Jaimes Chia - Trabajando para la Comunidad</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon">
     <!-- BOOTSTRAP -->
@@ -20,7 +21,7 @@
     <link rel="stylesheet" href="./components/footer/footer.css">
     <link rel="stylesheet" href="./components/donacion/donacion.css">
     <link rel="stylesheet" href="./components/discapacidad/discapcidad.css">
-    <title>Aviso Legal y Condiciones de Uso | Fundación Jaimes Chia</title>
+</head>
 
 <body>
 
